add help information using picocli

--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,7 @@ compileJava {
 application {
   mainClass = 'hexlet.code.App'
 }
+
+dependencies {
+  implementation 'info.picocli:picocli:4.6.2'
+}
