--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,5 @@ application {
 
 dependencies {
   implementation 'info.picocli:picocli:4.6.2'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 }
