--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ application {
 dependencies {
   implementation 'info.picocli:picocli:4.6.2'
   implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.0'
 
   testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
   testImplementation 'org.assertj:assertj-core:3.21.0'
